erDiagram

    TIPO_ONG }|--|| USUARIO: tiene
    TIPO_USUARIO ||--|{USUARIO: tiene
    USUARIO ||--|{ CALIFICACION_ONG: tiene
    USUARIO ||--|{ DETALLE_USUARIO: tiene
    USUARIO ||--|{ PUBLICACION: crea
    INFRACCIONES }|--|| USUARIO: tiene
    TIPO_INFRACCION ||--|{ INFRACCIONES: tiene

    PUBLICACION||--|{PUBLICACION_ETIQUETA: tiene
    PUBLICACION_ETIQUETA }|--|| ETIQUETA: tiene
    PUBLICACION ||--|{ RESPUESTA_PUBLICACION: tiene
    RESPUESTA_PUBLICACION ||--|{ RESPUESTA_PUBLICACION : tiene


    PUBLICACION_ETIQUETA ||--|{ PEDIDO_DONACION: tiene
    DETALLE_USUARIO ||--|{ PEDIDO_DONACION: "Persona Dona"
    TIPO_DONACION ||--|{ PEDIDO_DONACION: tiene

    PEDIDO_DONACION ||--|{ RANKING: actualiza
    TIPO_RANKING ||--|{RANKING: tiene

    ETIQUETA{
        int id_etiqueta PK
        str etiqueta
    }
    TIPO_DONACION{
        int id_tipo_donacion PK
        str tipo_donacion
        str descripcion 
        int puntos
    }
    PUBLICACION{
        int id_publicacion PK
        int id_usuario FK
        str titulo
        str descripcion_publicacion
        int num_megusta
        date fecha_publicacion
        date ultima_fecha_actualizacion
        str ubicacion 
    }
    PUBLICACION_ETIQUETA{
        int id_publicacion_etiqueta PK
        int id_publicacion FK
        int id_etiqueta FK
    }
    INFRACCIONES{
        int id_infraccion PK
        int id_usuario FK
        str contenido 
        int id_tipo_infraccion FK
        date fecha_infraccion
        date fecha_expiracion
    }
    TIPO_INFRACCION{
        int id_tipo_infraccion PK
        str tipo_infraccion
        str severidad
    }
    CALIFICACION_ONG{
        int id_calificacion PK
        int id_ong 
        int id_usuario FK
        float puntuacion
        str comentario
        date fecha_calificacion
    }
    PEDIDO_DONACION{
        int id_pedido PK
        int id_publicacion_etiqueta FK
        int id_usuario FK
        int id_tipo_donacion FK
        int cantidad

        int id_ong_evaluadora FK       
        str descripcion_voluntariado      
        int horas_donadas                   
        str estado_evaluacion              
        int puntos_otorgados               
        date fecha_evaluacion
        date fecha_donacion
    }
    RANKING{
        int id_ranking PK
        int id_tipo_ranking FK
        int id_usuario FK
        int puesto 
        int puntos
    }
    RESPUESTA_PUBLICACION{
        int id_respuesta PK
        int id_respuesta_padre FK
        int id_publicacion FK
        int id_usuario FK
        str mensaje
        date fecha_respuesta
        date moderated_at
        str moderation_status
        str rejection_reason

    }
    TIPO_ONG{
        int id_tipo_ong PK
        str grupo_social
        str necesidad
        int id_usuario FK
    }
    TIPO_RANKING{
        int id_tipo_ranking PK
        str tipo_ranking
    }
    TIPO_USUARIO{
        int id_tipo_usuario PK
        str tipo_usuario
    }
    DETALLE_USUARIO{
        int id_detalle_usuario PK
        int id_usuario FK
        boolean email_verified
        str auth_provider 
        str facebook_id
        str google_id
        str profile_picture
        str twitter_id
        int puntosActuales
        date ultima_fecha_actualizacion
    }
    USUARIO{
        int id_usuario PK
        str nombre
        str apellido
        str biografia
        email email
        str contrasena
        int id_tipo_usuario FK
        str ubicacion
        date createdAt
    }